--- a/projects/ngx-coding-components/src/lib/var-coding/code-rules/code-rules.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/code-rules/code-rules.component.html
@@ -1,25 +1,21 @@
 <mat-card [style.height.%]="100">
-  <mat-card-subtitle>
-    <div class="fx-row-space-between-center" [style.padding]="'0 16px'">
-      <div [style.color]="'grey'" [style.font-size]="'smaller'">{{'code.prompt.auto-coding' | translate}}</div>
-      @if (code) {
-        <div class="fx-row-end-center">
-          @if (code.ruleSets.length > 1 && schemerService.userRole !== 'RO') {
-            <mat-button-toggle-group appearance="legacy"
-              [(ngModel)]="code.ruleSetOperatorAnd"
-              [matTooltip]="'rule-set.prompt.operator' | translate">
-              <mat-button-toggle [value]="false">{{"rule.operator.false" | translate }}</mat-button-toggle>
-              <mat-button-toggle [value]="true">{{"rule.operator.true" | translate }}</mat-button-toggle>
-            </mat-button-toggle-group>
-          }
-        </div>
-      }
-    </div>
-  </mat-card-subtitle>
-
   <mat-card-content>
     @if (code ) {
-      @if(code.ruleSets.length > 1 || varInfo && varInfo.multiple) {<h4>Regelsätze</h4>}
+      @if(code.ruleSets.length > 1 || varInfo && varInfo.multiple) {
+        <div class="fx-row-space-between-start">
+          <h4>Regelsätze</h4>
+          <div class="fx-row-end-center">
+            @if (code.ruleSets.length > 1 && schemerService.userRole !== 'RO') {
+              <mat-button-toggle-group appearance="legacy"
+                                       [(ngModel)]="code.ruleSetOperatorAnd"
+                                       [matTooltip]="'rule-set.prompt.operator' | translate">
+                <mat-button-toggle [value]="false">{{"rule.operator.false" | translate }}</mat-button-toggle>
+                <mat-button-toggle [value]="true">{{"rule.operator.true" | translate }}</mat-button-toggle>
+              </mat-button-toggle-group>
+            }
+          </div>
+        </div>
+      }
         @for (ruleSet of code.ruleSets; track ruleSet; let ruleSetIndex = $index) {
           <div class="fx-row-start-start">
             <div class="fx-column-center-center">
