--- a/projects/ngx-coding-components/src/lib/var-coding/code-rules/code-rule-list.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/code-rules/code-rule-list.component.html
@@ -267,6 +267,7 @@
             }
             @if (ruleSet && ruleSet.rules.length > 1 && schemerService.userRole !== 'RO') {
               <mat-button-toggle-group appearance="legacy"
+                                       (valueChange)="setCodeRulesChanged()"
                                        [(ngModel)]="ruleSet.ruleOperatorAnd"
                                        [matTooltip]="'rule.prompt.operator' | translate">
                 <mat-button-toggle [value]="false">{{"rule.operator.false" | translate }}</mat-button-toggle>
