--- a/src/assets/customTheme.scss
+++ b/src/assets/customTheme.scss
@@ -1,16 +1,16 @@
 @use '../../node_modules/@angular/material/index' as mat;
 @import '../../node_modules/@angular/material/core/typography/all-typography';
 
-$aspect-typography: mat.define-typography-config(
+// Apply font style to all Material components
+@include mat.all-component-typographies(mat.m2-define-typography-config(
   $font-family: 'NunitoSans',
-);
-@include angular-material-typography($aspect-typography);
+));
 
 $aspect-element-border-color: #ccc;
 $aspect-element-border-hover-color: #333;
-$aspect-primary: mat.define-palette(mat.$pink-palette);
-$aspect-accent: mat.define-palette(mat.$cyan-palette, 900);
-$aspect-theme: mat.define-light-theme((
+$aspect-primary: mat.m2-define-palette(mat.$m2-pink-palette);
+$aspect-accent: mat.m2-define-palette(mat.$m2-cyan-palette, 900);
+$aspect-theme: mat.m2-define-light-theme((
   color: (primary: $aspect-primary, accent: $aspect-accent),
 ));
 
