--- a/projects/ngx-coding-components/src/lib/schemer/schemer.component.html
+++ b/projects/ngx-coding-components/src/lib/schemer/schemer.component.html
@@ -1,80 +1,96 @@
 <div class="scheme-body fx-row-space-between-stretch">
-  @if (basicVariables.length !== 0) {
+  @if (basicVariables && basicVariables.length !== 0) {
     <div class="navi-bar fx-column-space-between-stretch">
       <div class="var-scheme-list fx-flex">
-        <div class="var-list-header">{{'varList.base' | translate}}</div>
+        <div class="var-list-header">{{ 'varList.base' | translate }}</div>
         @for (varBasic of basicVariables; track varBasic) {
           <mat-nav-list class="fx-column-start-stretch">
             <div class="fx-row-start-center">
-              <div [class]="'var-marker-' + codingStatus[varBasic.id]" [matTooltip]="('coding-status.' + codingStatus[varBasic.id]) | translate"></div>
-              <a mat-list-item style="height: 22px;text-overflow: ellipsis"
-                class="var-list-entry"
-                [class]="varBasic.id === (selectedCoding$ | async)?.id ? 'selected' : 'not-selected'"
-                (click)="selectVarScheme(varBasic)">
+              <div [class]="'var-marker-' + codingStatus[varBasic.id]"
+                   [matTooltip]="('coding-status.' + codingStatus[varBasic.id]) | translate">
+              </div>
+              <a mat-list-item
+                 style="height: 22px; text-overflow: ellipsis"
+                 class="var-list-entry"
+                 [class]="varBasic.id === (selectedCoding$ | async)?.id ? 'selected' : 'not-selected'"
+                 (click)="selectVarScheme(varBasic)">
                 {{ varBasic.alias || varBasic.id }}
               </a>
             </div>
           </mat-nav-list>
         }
-        <div class="var-list-header">{{'varList.derived' | translate}}</div>
+        <div class="var-list-header">{{ 'varList.derived' | translate }}</div>
         @for (varScheme of derivedVariables; track varScheme) {
           <mat-nav-list class="fx-column-start-stretch">
             <div class="fx-row-start-center">
-              <div [class]="'var-marker-' + codingStatus[varScheme.id]" [matTooltip]="('coding-status.' + codingStatus[varScheme.id]) | translate"></div>
-              <a mat-list-item style="height: 22px;text-overflow: ellipsis"
-                class="var-list-entry"
-                (click)="selectVarScheme(varScheme)"
-                [class]="varScheme.id === (selectedCoding$ | async)?.id ? 'selected' : 'not-selected'">
+              <div [class]="'var-marker-' + codingStatus[varScheme.id]"
+                   [matTooltip]="('coding-status.' + codingStatus[varScheme.id]) | translate">
+              </div>
+              <a mat-list-item
+                 style="height: 22px; text-overflow: ellipsis"
+                 class="var-list-entry"
+                 (click)="selectVarScheme(varScheme)"
+                 [class]="varScheme.id === (selectedCoding$ | async)?.id ? 'selected' : 'not-selected'">
                 {{ varScheme.alias || varScheme.id }}
               </a>
             </div>
           </mat-nav-list>
         }
       </div>
-      <!-- # # # # # # # # # # # # # # # # # # # # # # # # -->
       <div class="var-list-buttons fx-row-space-between-center">
-        <button mat-button (click)="addVarScheme()" [disabled]="schemerService.userRole === 'RO'"
-          [matTooltip]="'varList.add' | translate" matTooltipPosition="above">
+        <button mat-button (click)="addVarScheme()"
+                [disabled]="schemerService.userRole === 'RO'"
+                [matTooltip]="'varList.add' | translate" matTooltipPosition="above">
           <mat-icon class="bold-icon">add</mat-icon>
         </button>
-        <button mat-button [disabled]="schemerService.userRole === 'RO'"
-                         (click)="deleteVarScheme()" [matTooltip]="'varList.delete' | translate" matTooltipPosition="above">
-        <mat-icon>delete</mat-icon>
+        <button mat-button
+                [disabled]="schemerService.userRole === 'RO'"
+                (click)="deleteVarScheme()"
+                [matTooltip]="'varList.delete' | translate" matTooltipPosition="above">
+          <mat-icon>delete</mat-icon>
         </button>
-        <button mat-button (click)="renameVarScheme()"
+        <button mat-button
+                (click)="renameVarScheme()"
                 [disabled]="(selectedCoding$ | async) === null || (selectedCoding$ | async)?.sourceType === 'BASE' || schemerService.userRole === 'RO'"
                 [matTooltip]="'varList.rename' | translate" matTooltipPosition="above">
           <mat-icon>edit</mat-icon>
         </button>
-
-        <button mat-button [disabled]="(selectedCoding$ | async) === null || schemerService.userRole === 'RO'"
+        <button mat-button
+                [disabled]="(selectedCoding$ | async) === null || schemerService.userRole === 'RO'"
                 [matTooltip]="'varList.copy' | translate" (click)="copyVarScheme()" matTooltipPosition="above">
           <mat-icon>content_copy</mat-icon>
         </button>
-        <button mat-button [matMenuTriggerFor]="otherFunctions" [matTooltip]="'varList.more-actions' | translate" matTooltipPosition="above">
+        <button mat-button [matMenuTriggerFor]="otherFunctions"
+                [matTooltip]="'varList.more-actions' | translate" matTooltipPosition="above">
           <mat-icon>menu</mat-icon>
         </button>
         <mat-menu #otherFunctions="matMenu">
-          <button mat-menu-item (click)="activateBaseNoValueVars()"
-                  [disabled]=" schemerService.userRole === 'RO'">
-            <mat-icon>bolt</mat-icon>{{'varList.activate-base-no-value' | translate}}
+          <button mat-menu-item
+                  (click)="activateBaseNoValueVars()"
+                  [disabled]="schemerService.userRole === 'RO'">
+            <mat-icon>bolt</mat-icon>
+            {{ 'varList.activate-base-no-value' | translate }}
           </button>
-
           <button mat-menu-item (click)="checkVarScheme()">
-            <mat-icon>check</mat-icon>{{'varList.check' | translate}}
+            <mat-icon>check</mat-icon>
+            {{ 'varList.check' | translate }}
           </button>
-          <button mat-menu-item (click)="variableDependencyTree()" [disabled]="derivedVariables.length === 0">
-            <mat-icon>account_tree</mat-icon>{{'varList.derived-tree.title' | translate}}
+          <button mat-menu-item (click)="showCodingScheme()">
+            <mat-icon>reorder</mat-icon>
+            {{ 'varList.show' | translate }}
+          </button>
+          <button mat-menu-item
+                  (click)="variableDependencyTree()"
+                  [disabled]="derivedVariables.length === 0">
+            <mat-icon>account_tree</mat-icon>
+            {{ 'varList.derived-tree.title' | translate }}
           </button>
         </mat-menu>
-
       </div>
     </div>
   }
-
-  @if (basicVariables.length === 0) {
-    <div
-    style="margin: 20px;">{{'data-error.base-variables-missing' | translate}}</div>
+  @if (basicVariables && basicVariables.length === 0) {
+    <div style="margin: 20px;">{{ 'data-error.base-variables-missing' | translate }}</div>
   }
   <var-coding [varCoding]="selectedCoding$ | async" class="var-coding-container fx-flex-row-100"></var-coding>
 </div>
