Use @use instead @include

--- a/src/assets/customTheme.scss
+++ b/src/assets/customTheme.scss
@@ -1,5 +1,5 @@
 @use '../../node_modules/@angular/material/index' as mat;
-@import '../../node_modules/@angular/material/core/typography/all-typography';
+@use '../../node_modules/@angular/material/core/typography/all-typography';
 
 // Apply font style to all Material components
 @include mat.all-component-typographies(mat.m2-define-typography-config(
